--- a/index.html
+++ b/index.html
@@ -29,8 +29,17 @@
 		</filter>
 	</defs>
 </svg>
+
+	
     <div class="board"></div>
- 
+	<section class="first-screen">
+		<p>Completa el Rompecabezas</p>
+		<img src="./assets/photo.jpg" alt="caraculo">
+	</section>
+	<section class="startBtn-container">
+		<button class="play.btn" id="start">Empezar</button>
+
+	</section>
     
 
     <script src="./main.js"></script>    
