--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <div class="board"></div>
 	<section class="first-screen">
 		<p>Completa el Rompecabezas</p>
-		<img src="./assets/photo.jpg" alt="caraculo">
+		<img src="./assets/photo.jpg" alt="caraculo" width="600px">
 	</section>
 	<section class="startBtn-container">
 		<button class="play.btn" id="start">Empezar</button>
