--- a/index.html
+++ b/index.html
@@ -40,7 +40,10 @@
 		<button class="play.btn" id="start">Empezar</button>
 
 	</section>
-    
+    <div class="button-container">
+		<button id="playbtn">PLAY</button>
+		<button id="pausebtn">PAUSE</button>
+	</div>
 
     <script src="./main.js"></script>    
 </body>
