ADD: css pantalla inicial botones

--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
     <div class="board"></div>
 	<section class="first-screen">
 		<p>Completa el Rompecabezas</p>
-		<img src="./assets/photo.jpg" alt="caraculo" width="600px">
+		<img src="./assets/photo.jpg" alt="caraculo" >
 	</section>
 	<section class="startBtn-container">
-		<button class="play.btn" id="start">Empezar</button>
+		<button class="play-btn" id="start">Empezar</button>
 
 	</section>
     <div class="button-container">
