ADD: css pantalla inicial botones 3

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	
     <div class="board"></div>
 	<section class="first-screen">
-		<p>Completa el Rompecabezas</p>
+		<p></p>
 		<img src="./assets/photo.jpg" alt="caraculo" >
 	</section>
 	<section class="startBtn-container">
@@ -43,7 +43,7 @@
     <div class="button-container">
 		<button id="playbtn">PLAY</button>
 		<button id="pausebtn">PAUSE</button>
-	</div>
+	</div><Br>
 
     <script src="./main.js"></script>    
 </body>
