ADD: css pantalla inicial botones 4

--- a/index.html
+++ b/index.html
@@ -38,12 +38,13 @@
 	</section>
 	<section class="startBtn-container">
 		<button class="play-btn" id="start">Empezar</button>
-
+		<div class="btn-shadow"></div>
 	</section>
-    <div class="button-container">
-		<button id="playbtn">PLAY</button>
-		<button id="pausebtn">PAUSE</button>
-	</div><Br>
+    
+	<div class="button-container">
+		<button id="playbtn"></button>
+		<button id="pausebtn"></button>
+	</div>
 
     <script src="./main.js"></script>    
 </body>
