ADD: logica ganador tiempo partida

--- a/index.html
+++ b/index.html
@@ -30,7 +30,9 @@
 	</defs>
 </svg>
 
-	
+	<section class="counter-container">
+		<span class="counter">10</span>
+	</section>
     <div class="board"></div>
 	<section class="first-screen">
 		<p></p>
