--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="./styles.css"
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Rompecabezas JS</title>
+	<link  rel="icon" href="./assets/rompecabezas.png" >
 </head>
 <body>
     <!-- The two texts -->
