--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
 	<span id="text2"></span>
 </div>
 
-<!-- The SVG filter used to create the merging effect -->
+<!-- The SVG filter used to create the merging effect 
 <svg id="filters">
 	<defs>
 		<filter id="threshold">
-			<!-- Basically just a threshold effect - pixels with a high enough opacity are set to full opacity, and all other pixels are set to completely transparent. -->
+			<!-- Basically just a threshold effect - pixels with a high enough opacity are set to full opacity, and all other pixels are set to completely transparent. 
 			<feColorMatrix in="SourceGraphic"
 					type="matrix"
 					values="1 0 0 0 0
@@ -29,7 +29,7 @@
 									0 0 0 255 -140" />
 		</filter>
 	</defs>
-</svg>
+</svg>-->
 
 	<section class="counter-container">
 		<span class="counter">10</span>
